--- a/login.html
+++ b/login.html
@@ -15,12 +15,14 @@
                 <input type="text" id="login-username" placeholder="Username">
                 <input type="password" id="login-password" placeholder="Password">
                 <button onclick="login()">Login</button>
+                <p class="toggle-text">Don't have an account? <span class="toggle-link" onclick="showRegisterForm()">Register</span></p>
             </div>
             <div id="register-form">
                 <h2>Register</h2>
                 <input type="text" id="register-username" placeholder="Username">
                 <input type="password" id="register-password" placeholder="Password">
                 <button onclick="register()">Register</button>
+                <p class="toggle-text"><span class="toggle-link" onclick="showLoginForm()">Back to Login</span></p>
             </div>
         </div>
     </div>
