Rename favorites to watch list and modernize UI

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </header>
 
     <div class="container">
-        <aside class="favorites">
-            <h2>Favorites</h2>
-            <input type="text" id="favorite-search-input" placeholder="Search tokens...">
+        <aside class="watch-list">
+            <h2>Watch List</h2>
+            <input type="text" id="watch-search-input" placeholder="Search tokens...">
             <div id="search-results"></div>
-            <div id="favorite-folders"></div>
+            <div id="watch-folders"></div>
             <input type="text" id="folder-name-input" placeholder="New folder name">
-            <button onclick="addFolder()">Add Folder</button>
+            <button onclick="addWatchFolder()">Add Folder</button>
         </aside>
 
         <main class="modules">
