Add watch list edit mode

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container">
         <aside class="watch-list">
             <h2>Watch List</h2>
+            <button id="edit-watch-btn" onclick="toggleWatchEdit()">Edit</button>
             <input type="text" id="watch-search-input" placeholder="Search tokens...">
             <div id="search-results"></div>
             <div id="watch-folders"></div>
